- added indexed drawing and interleaved buffers - various improvements

--- a/FluidDynamicsMetal/Base.lproj/Main.storyboard
+++ b/FluidDynamicsMetal/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lKS-uA-TQ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="990" y="137"/>
+            <point key="canvasLocation" x="989.60000000000002" y="136.28185907046478"/>
         </scene>
     </scenes>
 </document>
