--- a/FluidDynamicsMetaliOS/Base.lproj/Main.storyboard
+++ b/FluidDynamicsMetaliOS/Base.lproj/Main.storyboard
@@ -12,12 +12,12 @@
         <!--Render View Controller-->
         <scene sceneID="qKc-yH-fcW">
             <objects>
-                <viewController id="pqR-dy-SnI" customClass="RenderViewController" customModule="FluidDynamicsMetal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="pqR-dy-SnI" customClass="RenderViewController" customModule="FluidDynamicsMetaliOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="s7o-ca-Sq8"/>
                         <viewControllerLayoutGuide type="bottom" id="BWT-AI-ec4"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="tOE-FS-aut" customClass="MTKView">
+                    <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="tOE-FS-aut" customClass="MTKView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
